# footlight

./: .env.example  .git-blame-ignore-revs  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SPEC.md  clips.example.csv  codecov.yml  eslint.config.js  package-lock.json  package.json  release-please-config.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.md  bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release-please.yml
app/: .gitignore  activity.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/dev-server/: server.mjs
app/src/: activity.ts  autotrack.ts  editor-actions.ts  editor-caption-preview.ts  editor-chat-context.ts  editor-chat.ts  editor-commit.ts  editor-crop.ts  editor-fades.ts  editor-format.ts  editor-framing.ts  editor-offset.ts  editor-prefs.ts  (+18 more)
app/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
icons/: README.md
prompts/: base.md
scripts/: doctor.sh  fetch-fonts.sh  setup-system.sh
site/: CNAME  fonts.css  index.html  main.js  styles.css
src/: cli.ts  core.ts  csv.ts  engine.ts  manifest.ts  model.ts  secret-migration.ts  studio.ts  track.ts
test/: assistant-cost.test.ts  assistant-gemini.test.ts  assistant-orchestrator.test.ts  assistant-tools.test.ts  captions.test.ts  cli.test.ts  commands.test.ts  cover.test.ts  croppath.test.ts  cropwindowpath.test.ts  csv.test.ts  engine-subprocess.test.ts  engine.test.ts  loudness.test.ts  manifest.test.ts  model.test.ts  onsets.test.ts  providers-gemini.test.ts  rehydrate.test.ts  secret-migration.test.ts  studio.test.ts  track.test.ts
(+85 files in other folders)
