# Copyright 2026 Trevor Baker, all rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "footlight"
version = "0.1.0"
description = "Footlight — cut 16:9 video into 1080x1920 (9:16) vertical clips."
authors = ["Trevor Baker"]
license = "Apache-2.0"
repository = "https://github.com/tjbaker/footlight"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
