# Copyright 2026 Trevor Baker, all rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "footlight"
version = "0.4.0"
description = "Footlight — cut 16:9 video into 1080x1920 (9:16) vertical clips."
authors = ["Trevor Baker"]
license = "Apache-2.0"
repository = "https://github.com/tjbaker/footlight"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-keychain access for the secretStore platform capability (BYOK API key).
# The `apple-native`/`windows-native`/`sync-secret-service` features select the
# platform-native backend on macOS / Windows / Linux respectively.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# System font enumeration for the caption font picker (list_fonts command).
# CoreText on macOS, DirectWrite on Windows, fontconfig on Linux.
font-kit = "0.14"
